<?xml version="1.0" encoding="utf-8"?>
<!---Creando la tarjeta-->
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="true"
    app:cardCornerRadius="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">


        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/backgroud_image_button"
            android:scaleType="centerCrop"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/walley1"
                android:padding="4dp"
                android:paddingBottom="0dp"
                android:text="@string/product_title"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/product_description"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/product_description"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/product_price"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textAlignment="center"
                android:textSize="12dp"

                android:fontFamily="@font/bodoni_roman"
                />

            <Button
                android:id="@+id/product_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/backgroud_image_button"
                android:text="@string/button_card"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:fontFamily="@font/bodoni_bold"

                />

            <TextView
                android:id="@+id/url_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />


        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>