<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"

        >


        <ImageView
            android:id="@+id/fondo_url"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:adjustViewBounds="true"

            android:background="@android:color/transparent"
            android:scaleType="centerCrop" />



        <com.google.android.material.card.MaterialCardView

            android:layout_width="224dp"
            android:layout_height="223dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            app:cardBackgroundColor="@color/white"

            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp"

                    >

                    <TextView
                        android:id="@+id/title_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/walley2"
                        android:text="@string/detail_title"
                        android:textColor="@color/black"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/price_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/walley1"
                        android:text="@string/detail_precio"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/description_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/bodoni_roman"
                    android:padding="15dp"
                    android:text="@string/detail_descripcion"
                    android:textSize="15dp" />


                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/backgroud_image_button"
                    android:fontFamily="@font/bodoni_bold"
                    android:text="@string/detail_button"
                    android:textColor="@color/black"
                    android:textSize="13dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

